[tool.poetry]
name = "display_script"
version = "0.1.0"
description = ""
authors = ["HappyCthulhu <valeriyg98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
dynaconf = "^3.1.5"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
